--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
     <title>Mikhaella Tagle's Geportfolio</title>
 </head>
 
@@ -30,7 +32,7 @@
     <p>
         <strong>Bachelor of Science Information And Technology</strong> from <em>Pamantasan Lungsod ng Muntinlupa</em><br>
         <strong>Graduation Year:</strong> [2022]<br>
-        
+
     </p>
 
     <h2>Interests</h2>
